# philosophers-stone-nixos

./: .gitignore  .gitlab-ci.yml  README.md  default.nix  notes.md  release.nix  shell.nix
ci/: generate.sh  gitlab-ci.nix
doc/slides/: default.nix  slides.md
integration-tests/: message-service.nix
modules/: iso.nix  message-service.nix  overlay.nix  size-reduction.nix  stone-base.nix  stone-desktop.nix
nix/: ci.nix  nixpkgs.nix  overlay.nix  sources.json
projects/hello-stone/: default.nix  hello-stone.patch
projects/message-client/: Cargo.toml  build.nix  default.nix  setup.py
projects/message-client-rust/: Cargo.toml  build.nix  default.nix
projects/message-client-rust/src/: db_helper.rs  main.rs  message-terminal-client.rs  message-web-client.rs
projects/message-client/src/: db_helper.rs  message-web-client.rs
projects/message-server/: CMakeLists.txt  build.nix
projects/message-server/src/: CMakeLists.txt  db.cpp
scripts/: closure.sh  list-source-tarballs.sh  run-iso-in-qemu.sh  source-closure.sh
